<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:backgroundTint="#353434"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/game_over"
        android:textColor="@color/red"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/finalScoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/your_score"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/level_label"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF9800"
        android:text="@string/home"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/play_again"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

</LinearLayout>