<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353434"
    tools:context=".AboutMe">

    <!-- Back Button -->

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="344dp"
        android:layout_marginTop="38dp"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/back"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/about_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- ImageView -->
            <ImageView
                android:id="@+id/image_profile"
                android:layout_width="200dp"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/about_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/hyman_image" />

            <!-- Name Title -->
            <TextView
                android:id="@+id/text_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_name_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_profile"
                android:layout_marginTop="24dp" />

            <!-- Name Value -->
            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/text_name_title"
                app:layout_constraintTop_toTopOf="@id/text_name_title"
                android:layout_marginStart="8dp" />

            <!-- SID Title -->
            <TextView
                android:id="@+id/text_sid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sid_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name_title"
                android:layout_marginTop="16dp" />

            <!-- SID Value -->
            <TextView
                android:id="@+id/text_sid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sid"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/text_sid_title"
                app:layout_constraintTop_toTopOf="@id/text_sid_title"
                android:layout_marginStart="8dp" />

            <!-- Programme Title -->
            <TextView
                android:id="@+id/text_programme_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_programme_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_sid_title"
                android:layout_marginTop="16dp" />

            <!-- Programme Value -->
            <TextView
                android:id="@+id/text_programme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_programme"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/text_programme_title"
                app:layout_constraintTop_toTopOf="@id/text_programme_title"
                android:layout_marginStart="8dp" />

            <!-- Summary Title -->
            <TextView
                android:id="@+id/text_summary_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_summary_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_programme_title"
                android:layout_marginTop="16dp" />

            <!-- Summary Value -->
            <TextView
                android:id="@+id/text_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/about_summary"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_summary_title"
                tools:ignore="VisualLintLongText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>