<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353434"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- About Me Button -->

    <ImageButton
        android:id="@+id/button_about_me"
        android:layout_width="75dp"
        android:layout_height="74dp"
        android:layout_marginTop="28dp"
        android:background="@mipmap/ic_about_me_foreground"
        android:contentDescription="@string/about_title"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_about_me_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_intro"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/intro_title"
        android:scrollbarSize="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/button_about_me"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139"
        app:srcCompat="@android:drawable/ic_dialog_info"
        app:tint="#FF9800" />

    <LinearLayout
        android:id="@+id/centered_content"
        android:layout_width="290dp"
        android:layout_height="307dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696"
        tools:ignore="TextSizeCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:shadowColor="@color/white"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF9800"
            android:text="@string/start_game"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/chooseLevelButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#FF9800"
            android:text="@string/choose_level"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/levelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_label"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="91dp"
        android:layout_height="83dp"
        app:layout_constraintBottom_toTopOf="@+id/centered_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/colorswitch_ic_launcher"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>